--- a/style.css
+++ b/style.css
@@ -32,10 +32,13 @@ h1 {
     align-items: center;
     font-size: 30px;
     font-weight: bold;
+    transition: background-color 0.2s ease-out;
 }
 .key.active {
-    border: 2px solid #FF0;
-    color: #FF0;
+    border: 2px solid #FF1744;
+    color: #FF1744; 
+    background-color: rgba(255, 23, 68, 0.2); /* Fundo amarelo semi-transparente */
+    transition: background-color 0.2s ease-out;
 }
 
 .composer {
